1999-10-04  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: We might need -lsocket for the -lnsl check.

1999-09-19  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_ulink.c: Typos in C++ comment
	Reported by: Thomas.Tornblom@Sun.SE 

	* configure.in: 4.0.98a

	* ntpd/ntp_config.c (getconfig): Fix typo.
	From: "David E. Myers" <dem@skyline.rtp.nc.us> 
	From: David Godfrey <dave@delta.demon.co.uk>
	From: Geoffrey Sisson <geoff@nominet.org.uk>

1999-09-17  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98

	NetInfo support:

	* config.guess
	* config.sub
	Add Mac OS (versions 10 and up).

	* acconfig.h
	* config.h.in
	* configure.in
	Check for NetInfo API; add HAVE_NETINFO macro and friends.

	* include/ntp.h
	* ntpd/ntp_config.c
	* ntpdate/ntpdate.c
	Add support for reading configuration from NetInfo.

	* ntpd/ntp_config.c
	Get rid of unnecessary eol variable in tokenizer.

	* html/notes.htm
	* html/ntpd.htm
	* html/ntpdate.htm
	Document NetInfo functionality.

	* util/tickadj.c
	Use HAVE_KVM_OPEN conditional around kvm.h include.
	
	From: Wilfredo Sanchez <wsanchez@apple.com>

1999-09-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* acconfig.h:
	* config.h.in:
	* configure.in:
	* html/driver34.htm:
	* html/refclock.htm:
	* include/ntp.h:
	* libntp/clocktypes.c:
	* ntpd/Makefile.am:
	* ntpd/ntp_control.c:
	* ntpd/refclock_conf.c:
	* ntpd/refclock_ulink.c:
	Ultralink driver
	From: Dave Strout <dstrout@linuxfoundary.com> 

1999-09-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: ReliantUNIX patches
	From: Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru> 

	* ntpd/refclock_atom.c: PPS cleanup
	* ntpd/ntp_refclock.c (refclock_ioctl): PPS cleanup
	From: Dave Mills <mills@udel.edu>

	* ntptrace/ntptrace.c (ReceiveBuf): addserver() can return NIL.
	Reported by: "Alan J. Wylie" <alanw@cyrano.com>

	* libntp/ieee754io.c:
	* ntpd/ntp_proto.c:
	* ntpd/ntp_refclock.c:
	Lint cleanup.
	From: Marc.Brett@westgeo.com
